<resources>
    <string name="app_name">Posunkuj s nami</string>
    <string name="title_dictionary">Slovník</string>
    <string name="title_education">Výučba</string>
    <string name="title_favorites">Obľúbené</string>
    <string name="title_info">Info</string>
    <string name="tab_lection">Lekcie</string>
    <string name="tab_test">Test</string>

    <string name="pouzitie_vo_vetach">"POUŽITIE VO VETÁCH"</string>
    <string name="video_count">"%d VIDEI</string>

    <string name="info_about">O aplikacii</string>
    <string name="info_rate">Ohodnotit aplikaciu</string>
    <string name="info_rate_us">Ako ste spokojni?</string>
    <string name="info_email">Kontaktovat nas</string>

    <string name="posunkuj_s_nami">"<b>Posunkuj</b> s nami"</string>
    <string name="info_about_project">"O projekte"</string>
    <string name="info_about_text">"Cieľom aplikacie je pomocť pri výučbe slovenského posunkového jazyka. \n\nChceme Vás poprosiť aby ste podporili rozvoj aplikácie svojou spatnou väzbou. V prípade akýchoľvek problémov alebo nápadov na zlepšenie nás neváhajte kontaktovať.\n\nZdrojove kódy projektu sú šírene formou "open source" - ak chcete prispieť k vývoju aplikácie, kontaktujte nás na <b>info@dorteo.sk</b>. Zdrojové kódy nájdete na <a href="https://github.com/misevcik/signLanguage">githube</a>."</string>
    <string name="info_about_partners_title">"Partneri"</string>
    <string name="info_about_partners_text">"Michal Hefty - autor slov a posunkov\nAndrej Kováč - kamera"</string>
    <string name="info_about_eu">"Tento projekt je spolufinancovaný Európskou úniou z prostriedkov Európskeho socilálneho fondu - Európsky fond regionálneho rozvoja."</string>

    <string name="try_test">Skus sa otestovať</string>
    <string name="test_phrase">Aké slovo je znázornené na videu?</string>
    <string name="test_result_recommendation">ODPORUČANIE</string>
    <string name="test_result_repeat">ZOPAKOVAŤ TEST</string>
    <string name="test_result_finish">ZATVOR</string>
    <string name="test_result_item_summary_result">Vysledok Testu</string>

    <string name="test_question_id">Otázka</string>
    <string name="right">Správne</string>
    <string name="wrong">Neprávne</string>
    <string name="test_name">%d. Test - "%s</string>
    <string name="test_statistic">%d Správne/%d Neprávne</string>
    <string name="test_page">%d. otázka z %d</string>
    <string name="result">%d%% (%s)</string>
    <string name="test_result_name">Test - "%s</string>
    <string name="date">Dátum:</string>
    <string name="right_answers">Správne odpovede:</string>
    <string name="wrong_asnwers">Nesprávne odpovede:</string>
    <string name="ok_test">Test úspešny, môžete isť na ďalšiu lekciu.</string>
    <string name="improve_test">Mali by ste si ešte zopaovať lekciu aby ste sa zdokonalili.</string>
    <string name="repeat_test">Test neúspešný. Zopakujte si lekciu.</string>
    <string name="finish_test_no_continue">Nie, pokračovať</string>
    <string name="finish_test_yes_finish">Áno, ukončiť test</string>
    <string name="finish_test_detail">Predčasným ukončením testu sa nedozviete výsledok</string>
    <string name="finish_test_title">Nauzaj\nchcete ukončiť test?</string>

    <string name="video_control_slow_down">Spomaliť video</string>
    <string name="video_control_side_view">Bočný pohlad</string>
    <string name="download_text">Sťahuju sa videa %d%% </string>
    <string name="download_fail">Sťahovanie videii zlyhalo.</string>
    <string name="read_permission">Aplikácia vyžaduje prístup k uloženým videam s posunkami.</string>
    <string name="write_permission">Aplikácia vyžaduje prístup pre uloženie videi</string>
    <string name="permission_denied">Oprávnenie bolo zamietnute. Aplikácia nebude správne fungovať.</string>

</resources>
