<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/about_toolbar"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@color/white">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/info_about"
                android:gravity="center"
                android:textSize="25sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/about_toolbar"
            android:text="@string/posunkuj_s_nami"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_text"
            android:background="@drawable/search_bar_round"
            android:layout_centerInParent="true"
            android:layout_marginStart="25pt"
            android:layout_marginLeft="25pt"
            android:layout_marginTop="5pt"
            android:layout_marginBottom="5pt"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/info_about_project"
                android:textSize="25sp"
                android:layout_marginStart="5pt"
                android:layout_marginLeft="5pt"
                android:textStyle="bold"
                android:gravity="center_vertical|left|start"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_about_text"
                android:gravity="start"
                android:layout_marginLeft="5pt"
                android:layout_marginRight="5pt"
                android:textSize="20sp"
                android:autoLink="web"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/info_about_partners_title"
                android:textSize="25sp"
                android:layout_marginStart="5pt"
                android:layout_marginLeft="5pt"
                android:textStyle="bold"
                android:gravity="center_vertical|left|start"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_about_partners_text"
                android:gravity="start"
                android:layout_marginLeft="5pt"
                android:layout_marginRight="5pt"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10pt"
                android:layout_marginBottom="5pt">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="0.5"
                    android:src="@drawable/svk_flag"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:src="@drawable/eu_logo"/>
                />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_about_eu"
                android:gravity="start"
                android:layout_marginLeft="5pt"
                android:layout_marginRight="5pt"
                android:layout_marginTop="5pt"
                android:layout_marginBottom="5pt"
                android:textSize="20sp"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>