<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="350dp"
    android:minWidth="350dp"
    android:background="@android:color/transparent"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@drawable/search_bar_round"
        android:weightSum="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/finish_test_title"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:text="@string/finish_test_detail"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3">

            <Button
                android:id ="@+id/btn_finish_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/finish_test_yes_finish"
                android:textColor="@color/oceanBlue"
                android:background="@drawable/test_result_round_button_empty"/>

            <Button
                android:id ="@+id/btn_continue_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:text="@string/finish_test_no_continue"
                android:textColor="@color/white"
                android:background="@drawable/test_result_round_button_full" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>